// Database connection configuration
datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

// User authentication and basic information
model User {
  id                String    @id @default(cuid())
  email             String    @unique
  password          String?   // Nullable for OAuth users
  emailVerified     Boolean   @default(false)
  googleId          String?   @unique
  canResetPassword  Boolean   @default(false)
  profile           Profile?
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
}

// User profile with preferences
model Profile {
  id                String        @id @default(cuid())
  userId            String        @unique
  user              User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  username          String?
  prayers           Prayer[]
  prayerTimings     PrayerTimings?
  gender            Gender
  latitude          Float
  longitude         Float
  country           String?
  givenName         String?
  familyName        String?
  picture           String? 
  schoolOfThought   SchoolOfThought @default(SHAFI) // Default value set to Shafi'i
  createdAt         DateTime      @default(now())
  updatedAt         DateTime      @updatedAt
}

// Prayer timing details
model PrayerTimings {
  id           String   @id @default(cuid())
  fajrStart    DateTime
  fajrEnd      DateTime
  dhuhrStart   DateTime
  dhuhrEnd     DateTime
  asrStart     DateTime
  asrEnd       DateTime
  maghribStart DateTime
  maghribEnd   DateTime
  ishaStart    DateTime
  ishaEnd      DateTime
  sunrise      DateTime
  sunset       DateTime
  imsak        DateTime
  midnight     DateTime
  profile      Profile  @relation(fields: [profileId], references: [id], onDelete: Cascade)
  profileId    String   @unique
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}

// Prayer details
model Prayer {
  id           String        @id @default(cuid())
  prayerName   PrayerName
  menStatus    MenPrayerStatus?
  womenStatus  WomenPrayerStatus?
  performedAt  DateTime
  profile      Profile       @relation(fields: [profileId], references: [id], onDelete: Cascade)
  profileId    String
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  @@index([prayerName])
  @@index([menStatus])
  @@index([womenStatus])
}

// Possible prayer completion statuses for MEN
enum MenPrayerStatus {
  TAKBEERE_E_ULA 
  SALATAL_JAMAAH 
  INDIVIDUAL_PRAYER
  MISSED
  QAZA                  // Missed but made up later
}

// Possible prayer completion statuses for WOMEN
enum WomenPrayerStatus {
  PRAYED_AT_TIME
  PRAYED_LATE
  PRAYED_TOO_LATE
  MISSED
  QAZA                  // Missed but made up later
}

// Gender options
enum Gender {
  MEN
  WOMEN
  OTHER
}

// Prayer types in Islamic religion
enum PrayerName {
  FAJR
  DHUHR
  ASR
  MAGHRIB
  ISHA
}

// School of thought (default is Shafi)
enum SchoolOfThought {
  SHAFI
  HANAFI
}
