//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String
  emailVerified Boolean [not null, default: false]
  googleId String [unique]
  canResetPassword Boolean [not null, default: false]
  profile Profile
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Profile {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  username String
  prayers Prayer [not null]
  prayerTimings PrayerTimings
  gender Gender [not null]
  latitude Float [not null]
  longitude Float [not null]
  country String
  givenName String
  familyName String
  picture String
  schoolOfThought SchoolOfThought [not null, default: 'SHAFI']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table PrayerTimings {
  id String [pk]
  fajrStart DateTime [not null]
  fajrEnd DateTime [not null]
  dhuhrStart DateTime [not null]
  dhuhrEnd DateTime [not null]
  asrStart DateTime [not null]
  asrEnd DateTime [not null]
  maghribStart DateTime [not null]
  maghribEnd DateTime [not null]
  ishaStart DateTime [not null]
  ishaEnd DateTime [not null]
  sunrise DateTime [not null]
  sunset DateTime [not null]
  imsak DateTime [not null]
  midnight DateTime [not null]
  profile Profile [not null]
  profileId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Prayer {
  id String [pk]
  prayerName PrayerName [not null]
  menStatus MenPrayerStatus
  womenStatus WomenPrayerStatus
  performedAt DateTime [not null]
  profile Profile [not null]
  profileId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum MenPrayerStatus {
  TAKBEERE_E_ULA
  SALATAL_JAMAAH
  INDIVIDUAL_PRAYER
  MISSED
  QAZA
}

Enum WomenPrayerStatus {
  PRAYED_AT_TIME
  PRAYED_LATE
  PRAYED_TOO_LATE
  MISSED
  QAZA
}

Enum Gender {
  MEN
  WOMEN
  OTHER
}

Enum PrayerName {
  FAJR
  DHUHR
  ASR
  MAGHRIB
  ISHA
}

Enum SchoolOfThought {
  SHAFI
  HANAFI
}

Ref: Profile.userId - User.id [delete: Cascade]

Ref: PrayerTimings.profileId - Profile.id [delete: Cascade]

Ref: Prayer.profileId > Profile.id [delete: Cascade]